$Id$
===============================================================

227	Luke Howard <lukeh@padl.com>

	* separate initializing LDAP session with actually
	  connecting to the DSA, so that we don't try to
	  bind until we actually need to search (which allows
	  the retry logic in the search function to also apply
	  to binding). NB: this will only provide improved
	  behaviour for LDAP client libraries that support
	  ldap_init() or ldap_initialize() rather than ldap_open
	* fix for BUG#183: support pw_change and pw_expire
	  on BSD
	* fix for BUG#187: NSS_BUFLEN_DEFAULT causing problems
	  on IRS platforms
	* fix for glibc 2.1 from Alexander Spannagel

226	Luke Howard <lukeh@padl.com>

	* make LDAP_NSS_NGROUPS configurable with
	  --with-ngroups (experts only) option

225	Luke Howard <lukeh@padl.com>

	* make LDAP_NSS_NGROUPS 64 - better choice for
	  small directories

224	Luke Howard <lukeh@padl.com>

	* don't double-free on realloc() failure in
	  do_parse_group_members()
	* don't pass LDAP session as an argument, as
	  it may refer to a stale LDAP handle. If this
	  does not work we will need to replace LDAPMessage
	  pointers with pointers to a structure that
	  contains a reference-counted LDAP handle as well
	  as the message
	* fix crasher when internal group membership
	  buffer was reallocated (introduced with nested
	  group expansion code)
	* immediately return NSS_TRYAGAIN and errno=ERANGE
	  if there is not enough buffer space to handle
	  LDAP_NSS_NGROUPS groups; this prevents getgrXXX()
	  from expensive repeated directory searches when
	  there is a priori knowledge that group memberships
	  are large

223	Luke Howard <lukeh@padl.com>

	* allow empty lines in /etc/ldap.conf
	* do loop detection in nested groups
	* fixes for building with IRS on FreeBSD 4.10

222	Luke Howard <lukeh@padl.com>

	* fix deadlock in _nss_ldap_getentry()
	* support more AIX usersec attributes
	* more AIX porting fixes
	* support Heimdal as well as MIT Kerberos
