@@ -257,7 +257,9 @@ base dc=padl,dc=com
 
 # OpenLDAP SSL options
 # Require and verify server certificate (yes/no)
-# Default is "no"
+# Default is to use libldap's default behavior, which can be configured in
+# /etc/openldap/ldap.conf using the TLS_REQCERT setting.  The default for
+# OpenLDAP 2.0 and earlier is "no", for 2.1 and later is "yes".
 #tls_checkpeer yes
 
 # CA certificates for server certificate verification
